# communitiesuk.funding-service

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ad_hoc_dev_deploy.yml  build_deploy_e2e_pipeline.yml  deploy.yml  refresh_seeded_grants.yml  run_e2e_tests.yml  run_e2e_tests_docker_compose.yml
.github/workflows/run-database-migrations/: action.yml
app/: __init__.py  config.py
app/access_grant_funding/: routes.py
app/access_grant_funding/routes/: __init__.py  misc.py  reports.py
app/access_grant_funding/templates/access_grant_funding/: base.html  grant_list.html
app/access_grant_funding/templates/access_grant_funding/auth/: check_email.html  claim_magic_link.html  sign_in_magic_link.html
app/common/auth/: __init__.py  authorisation_helper.py  decorators.py  forms.py  sso.py
app/common/collections/: forms.py  runner.py
app/common/data/: models.py  models_user.py
app/common/data/interfaces/: collections.py  exceptions.py  organisations.py  temporary.py  user.py
app/common/data/migrations/: .current-alembic-head
app/common/data/migrations/versions/: 013_add_another_guidance.py  021_add_permissions_array.py  022_make_role_nullable.py  023_remove_role_columns.py
app/common/expressions/: __init__.py  managed.py
app/common/forms/: validators.py
app/common/helpers/: collections.py
app/common/templates/common/macros/: collections.html
app/common/templates/common/partials/: navigation.html
app/deliver_grant_funding/: forms.py  session_models.py
app/deliver_grant_funding/admin/: entities.py  forms.py  views.py
app/deliver_grant_funding/routes/: reports.py
app/deliver_grant_funding/templates/deliver_grant_funding/admin/: reporting-lifecycle-tasklist.html  revoke-certifiers.html  set-up-certifiers.html
app/deliver_grant_funding/templates/deliver_grant_funding/macros/: question_table.html
app/deliver_grant_funding/templates/deliver_grant_funding/partials/: existing-certifiers.html
app/deliver_grant_funding/templates/deliver_grant_funding/reports/: add_section.html  change_form_name.html  list_group_questions.html  list_reports.html  list_section_questions.html  list_task_questions.html  manage_add_another_guidance.html  manage_guidance.html  view_submission.html
app/developers/: commands.py
app/developers/data/: grants.json
tests/: models.py  utils.py
tests/e2e/: pages.py  test_magic_link_auth.py
tests/integration/: conftest.py  test_app.py
tests/integration/access_grant_funding/: test_routes.py
tests/integration/common/auth/: test_auth.py  test_decorators.py
tests/integration/common/data/db/: test_constraints.py
tests/integration/common/data/interfaces/: test_collections.py  test_organisations.py  test_user.py
tests/integration/common/helpers/: test_collections.py
tests/integration/deliver_grant_funding/admin/: test_views.py
tests/integration/deliver_grant_funding/routes/: test_reports.py
tests/unit/: test_all_routes_access.py
tests/unit/common/auth/: test_authorisation_helper.py
tests/unit/common/data/: test_models.py
tests/unit/common/forms/: test_validators.py
tests/unit/deliver_grant_funding/: test_forms.py
